# KinPy

./: .gitignore  README.md  SerialNumberTest.py  SerialNumberWin.py  Testing.py  pyproject.toml  setup.py
src/kinpy/: __init__.py  directus_transfer.py  get_auth.py  handlers.py  interfaces.py  pyproject.toml  routes.py  square.py  test_client.py  utils.py
src/kinpy/models/: ActionResult.py  CreatorField.py  CustomViewForm.py  DateField.py  DateFieldForm.py  DecimalSimpleProperties.py  EditorSimpleValue.py  GroupBean.py  IconFileForm.py  LabelField.py  LinkSimpleProperties.py  ListViewForm.py  ModifiedAtFieldForm.py  MultipleCheckField.py  MultipleCheckFieldForm.py  MultipleLineTextSimpleValue.py  MultipleSelectSimpleValue.py  NumberPrecision.py  OptionForm.py  OrganizationSelectSimpleValue.py  PeriodHour.py  PeriodMonth.py  PeriodicReport.py  PluginForm.py  RecordBean.py  RecordForm.py  RecordIdField.py  RecordStatusPutForm.py  RecordsDeleteForm.py  RecordsDeleteOutputForm.py  RecordsPutOutputForm.py  RecordsStatusPutOutputFormRecord.py  Report.py  RightForm.py  SingleCheckField.py  SingleLineTextFieldForm.py  SingleLineTextSimpleProperties.py  SingleSelectSimpleValue.py  SpacerField.py  SpacerProperties.py  (+14 more)
src/kinpy/models/_generated/: Action.py  ActionForm.py  AppDto.py  AppForm.py  AppWithSpaceIdForm.py  AssigneeEntityForm.py  AttachedApp.py  BuiltinCalendarViewOutputForm.py  BuiltinListViewOutputForm.py  BultinProperties.py  CalcField.py  CalcFieldForm.py  CalcSimpleProperties.py  CalcSimpleValue.py  Entity.py  (+138 more)
src/kinpy/tests/: serial_number.py  test_client.py
(+1 files in other folders)
